--- a/iConfs-iOS/MainStoryboard.storyboard
+++ b/iConfs-iOS/MainStoryboard.storyboard
@@ -717,7 +717,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9Vd-fR-HUc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1683" y="451"/>
+            <point key="canvasLocation" x="1739" y="-1581"/>
         </scene>
         <!--EventUI View Controller-->
         <scene sceneID="dBg-eA-mFn">
@@ -726,11 +726,33 @@
                     <view key="view" contentMode="scaleToFill" id="Ljv-Zl-qK0">
                         <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aPc-Sj-Njm">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="6AR-Am-Pii" kind="push" identifier="segue12" id="XYc-KS-Og4"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="aPc-Sj-Njm" secondAttribute="trailing" constant="43" id="98C-A8-Pde"/>
+                            <constraint firstItem="aPc-Sj-Njm" firstAttribute="top" secondItem="Ljv-Zl-qK0" secondAttribute="top" constant="69" id="PEt-8L-Qda"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="nBS-qc-b5p">
                         <barButtonItem key="backBarButtonItem" title="Back" id="p7K-Nl-pNl"/>
                     </navigationItem>
+                    <connections>
+                        <outlet property="roomButton" destination="aPc-Sj-Njm" id="Gqo-uS-0kz"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rIm-rk-VWK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -891,105 +913,6 @@
         <image name="Schedule.jpg" width="50" height="50"/>
         <image name="maps.jpg" width="50" height="50"/>
     </resources>
-    <classes>
-        <class className="AllNetworkingViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/AllNetworkingViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="navigationBar" candidateClass="UINavigationBar"/>
-                <relationship kind="outlet" name="tableNetworking" candidateClass="UITableView"/>
-            </relationships>
-        </class>
-        <class className="AllNotesViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/AllNotesViewController.h"/>
-        </class>
-        <class className="AllNotificationViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/AllNotificationViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="tableNotifications" candidateClass="UITableView"/>
-            </relationships>
-        </class>
-        <class className="CommunicationViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/CommunicationViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="clearButton:" candidateClass="UIButton"/>
-                <relationship kind="action" name="feedbackOrMessageButton:" candidateClass="UISegmentedControl"/>
-                <relationship kind="action" name="sendButton:"/>
-                <relationship kind="outlet" name="emailField" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="feedback" candidateClass="UITextView"/>
-            </relationships>
-        </class>
-        <class className="EventUIViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/EventUIViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="addNote:" candidateClass="UIButton"/>
-                <relationship kind="action" name="goToRoom:" candidateClass="UIButton"/>
-            </relationships>
-        </class>
-        <class className="HomeViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/HomeViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="updateButton:" candidateClass="UIBarButtonItem"/>
-            </relationships>
-        </class>
-        <class className="IConfsViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/IConfsViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="emailField" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="passwordField" candidateClass="UITextField"/>
-            </relationships>
-        </class>
-        <class className="ImageViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ImageViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="scrollView" candidateClass="UIScrollView"/>
-            </relationships>
-        </class>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-        <class className="NetworkingViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NetworkingViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="navigationBar" candidateClass="UINavigationBar"/>
-                <relationship kind="outlet" name="networkingDescription" candidateClass="UITextView"/>
-                <relationship kind="outlet" name="networkingTitle" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="personName" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="personPhoto" candidateClass="UIImageView"/>
-            </relationships>
-        </class>
-        <class className="NoteViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NoteViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="addNote:" candidateClass="UIBarButtonItem"/>
-                <relationship kind="action" name="addPerson:" candidateClass="UIButton"/>
-                <relationship kind="action" name="addSession:" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="aboutPersonButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="aboutSessionButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="noteTextView" candidateClass="UITextView"/>
-            </relationships>
-        </class>
-        <class className="NotificationViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NotificationViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="navigationBar" candidateClass="UINavigationBar"/>
-                <relationship kind="outlet" name="notificationDate" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="notificationName" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="notificationText" candidateClass="UITextView"/>
-            </relationships>
-        </class>
-        <class className="PersonProfileViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/PersonProfileViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="tableNetworking" candidateClass="UITableView"/>
-            </relationships>
-        </class>
-        <class className="PersonalProgramTKCalendarDayViewController" superclassName="TKCalendarDayViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/PersonalProgramTKCalendarDayViewController.h"/>
-        </class>
-        <class className="TKCalendarDayViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/TKCalendarDayViewController.h"/>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
@@ -997,5 +920,6 @@
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
         <segue reference="ukM-KT-DGy"/>
+        <segue reference="XYc-KS-Og4"/>
     </inferredMetricsTieBreakers>
 </document>
