--- a/iConfs-iOS/MainStoryboard.storyboard
+++ b/iConfs-iOS/MainStoryboard.storyboard
@@ -431,13 +431,21 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y5L-2U-WaO">
+                                <items>
+                                    <barButtonItem title="add Note" id="qG6-0B-E4z"/>
+                                </items>
+                            </toolbar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="Ljn-BT-JuF" firstAttribute="top" secondItem="Jh6-9K-yfU" secondAttribute="top" constant="223" id="3rg-ae-nmh"/>
                             <constraint firstItem="XWA-n3-PaT" firstAttribute="top" secondItem="Jh6-9K-yfU" secondAttribute="top" constant="546" id="58H-6p-557"/>
-                            <constraint firstItem="Ljn-BT-JuF" firstAttribute="leading" secondItem="Jh6-9K-yfU" secondAttribute="leading" constant="89" id="Sc3-89-hsv"/>
+                            <constraint firstItem="y5L-2U-WaO" firstAttribute="centerX" secondItem="Ljn-BT-JuF" secondAttribute="centerX" type="default" id="EYb-uw-v5O"/>
+                            <constraint firstItem="y5L-2U-WaO" firstAttribute="trailing" secondItem="Jh6-9K-yfU" secondAttribute="trailing" type="default" id="H6y-iP-NXv"/>
+                            <constraint firstItem="Ljn-BT-JuF" firstAttribute="top" secondItem="Jh6-9K-yfU" secondAttribute="top" constant="20" symbolic="YES" type="default" id="M8t-he-8Ur"/>
+                            <constraint firstItem="y5L-2U-WaO" firstAttribute="leading" secondItem="Jh6-9K-yfU" secondAttribute="leading" type="default" id="RhR-hS-MYs"/>
                             <constraint firstAttribute="trailing" secondItem="XWA-n3-PaT" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="ULT-NU-INo"/>
+                            <constraint firstItem="y5L-2U-WaO" firstAttribute="bottom" secondItem="Jh6-9K-yfU" secondAttribute="bottom" type="default" id="afq-wO-V0u"/>
                             <constraint firstItem="XWA-n3-PaT" firstAttribute="leading" secondItem="Jh6-9K-yfU" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="nGC-db-5rl"/>
                         </constraints>
                     </view>
@@ -446,7 +454,9 @@
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
+                        <outlet property="addNote" destination="qG6-0B-E4z" id="Nq1-nT-ERx"/>
                         <outlet property="tableNetworking" destination="Ljn-BT-JuF" id="qJz-bv-MWg"/>
+                        <outlet property="toolbar" destination="y5L-2U-WaO" id="mlU-Xg-hwm"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XHD-To-YFF" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -856,7 +866,7 @@
             <objects>
                 <viewController id="Djl-U9-qqq" customClass="NoteViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="lXc-zi-VKq">
-                        <rect key="frame" x="0.0" y="64" width="320" height="460"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jJ5-4O-OME">
@@ -963,8 +973,8 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="ukM-KT-DGy"/>
+        <segue reference="eJJ-Tb-A8d"/>
         <segue reference="XYc-KS-Og4"/>
-        <segue reference="hSP-JN-arM"/>
+        <segue reference="idi-Gk-Psv"/>
     </inferredMetricsTieBreakers>
 </document>
